--- a/sass/components/_index_section_1.scss
+++ b/sass/components/_index_section_1.scss
@@ -1,15 +1,13 @@
 
 /********************** СЕКЦИЯ ЭФФЕКТИВНЫЕ РЕШЕНИЯ **************************/
 .effect-solving {
-    // @media screen and (max-width: 737px){
-    //     display: none;
-    // }
+
 text-align: center;
-min-height: 600px;
+
 /* max-width: 1600px; */
 margin-left: auto;
 margin-right: auto;
-
+height: 600px;
 // background-image: linear-gradient(  
 //     to right,
 //     rgba(47,48,58,0.4),
@@ -18,9 +16,12 @@ margin-right: auto;
 //     url("../img/hero/mobile/img-hero@2x.jpg");
 // background-color:#2F303A;
 // background-size: cover;
+background-position: center;
 
 
   @media screen and(max-width: 767px) {
+    height: 400px;
+    padding-top: 118px;
       background-image: $gradient, url('/img/hero/mobile/img-hero.jpg');
       @media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
         background-image: $gradient, url('/img/hero/mobile/img-hero@2x.jpg');
@@ -29,22 +30,22 @@ margin-right: auto;
     }
 
     @media screen and(min-width: $tablet) {
-       height: 600px;
+      padding-top: 118px;
       background-image: $gradient, url('/img/hero/tablet/img-hero.jpg');
       @media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
         background-image: $gradient, url('/img/hero/tablet/img-hero@2x.jpg');
       }
     
     }
-       @media screen and(min-width: $desktop) {
+    @media screen and(min-width: $desktop) {
+      background-size: 1600px 600px;
+      padding-top: 200px;
+      // height: 600px;
       background-image: $gradient, url('/img/hero/desktop/img-hero.jpg');
       @media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
         background-image: $gradient, url('/img/hero/desktop/Img-hero@2x.jpg');
       }
     
-  
-
-
 
 
 //   @media screen and (min-width: 768px) {
@@ -70,14 +71,13 @@ margin-right: auto;
       
   }  
 
-background-position: center;
-padding-top: 200px;
+
 }
 .title-h1{
 
-
-    font-weight: 900;
-    letter-spacing: 0.06em;
+text-align: center;
+font-weight: 900;
+letter-spacing: 0.06em;
 text-transform: uppercase;
 @include for-size(desktop){
     width: 696px;
@@ -87,12 +87,16 @@ text-transform: uppercase;
 
 }
 
-@include for-size(tablet-only){
+@include for-size(tablet){
     width: 360px;
     font-size:26px;
     line-height: 1.615;
 }
-
+@include for-size(mobile){
+  width: 360px;
+  font-size:26px;
+  line-height: 1.615;
+}
 color: $white;
 
 margin: 0 auto;
