--- a/sass/components/_index_modal.scss
+++ b/sass/components/_index_modal.scss
@@ -43,27 +43,29 @@
 .modal{
 
     position: relative;
-    top: 50%;
-    left: 50%;
+    width: 450px;
+    background-color: $white;
+    border-radius: 4px;
+   
 
     @include for-size(desktop){
-        width: 528px;
+        max-width: 528px;
+        width: 100%;
         height: 581px;
     }
     @include for-size(tablet){
-        
-        width: 450px;
+        position: absolute;  
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%) scale(1);
+        max-width: 450px;
         height: 609px;
     }
-    @include for-size(mobile){
-        width: 450px;
-        height: 609px;
-    }
-    background-color: $white;
-    border-radius: 4px;
-    transform: translate(-50%,-50%) scale(1);
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+        max-width: 450px;
+        width: 100%;      
 }
-
+}
 .btn-close {
     display: inline-block;
     position: absolute;
