--- a/sass/components/_page_footer.scss
+++ b/sass/components/_page_footer.scss
@@ -71,16 +71,21 @@
 }
 
 .join { 
+   
    color: $white;
-
+   @include for-size(mobile){
+        
+        margin-top: 60px;
+    } 
+    @include for-size(tablet-only){
+       
+       margin-top: 0px;
+    } 
    @include for-size(desktop){
-    margin-left: 70px;
+        margin-left: 70px;
    }
 
-@include for-size(mobile){
 
-    margin-bottom: 60px;
- }
     width: 206px;
     height: 86px;
     font-style: normal;
@@ -94,11 +99,13 @@
 }
 
 .container-join{
-
     display: flex;
     list-style: none;
     padding: 0;
+     
+
     margin-top: 22px;
+ 
 
 
     margin-bottom: 0;
