--- a/sass/components/_portfolio_section_2.scss
+++ b/sass/components/_portfolio_section_2.scss
@@ -15,24 +15,40 @@
 }
 
 .container-grid {
-    display: flex;
-    flex-wrap: wrap;
-    list-style: none;
+    // display: flex    ;
+
+    // list-style: none;
     
     padding:0;
-    justify-content: space-between;
-    margin-top: 50px;
-    margin-bottom: 94px;
 
-    
+    @extend %list;
+    @include for-size(mobile){
+        margin-top: 46px;
+    }
+    @include for-size(tablet){
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: 36px;
+   
+
+    }
+    @include for-size(desktop){
+             margin: -15px;
+             margin-top: 56px;
+             margin-bottom: 94px;
+
+    }
+    justify-content: space-between;
+
 }
 
 .flex-element{
     
-    display: inline-block;   
-    width: 370px;
-    height: 404px;
-    margin-bottom: 30px; 
+    // display: inline-block;   
+    display: flex;
+    margin-top: 0;
+    margin-bottom: 0;
+
     border: 1px solid #EEEEEE;
     &:hover{
         box-shadow: 0px 2px 4px 0px $gray;
@@ -43,7 +59,32 @@
     &:nth-last-child(-n+3) {
         margin-bottom: 0px;
     }
-    
+    @media screen and (min-width: $mobile) {
+        width: 450px;
+        height: 404px;    
+    }
+
+    @media screen and (min-width: $tablet) {
+        width: 354px;
+        height: 440px;
+        flex-basis: calc((100% - 4 * 5px)/2);
+        margin: 5px;
+        }
+    @media screen and (min-width: $desktop) {
+        margin-bottom: 30px; 
+        width: 370px;
+        height: 404px;
+        flex-basis: calc((100% - 6* 15px)/3);
+        margin: 15px;
+
+        }
+    @media screen and (max-width: 737px) {
+
+        &:not(:last-child){
+            margin-bottom: 30px;
+        }
+    }
+
 }
 
 .flex-text {
@@ -52,8 +93,22 @@
 
 }
 .animation{
-    width: 370px;
+
     height: 294px;
+
+    @media screen and(min-width: 480px) {
+        width: 450px;
+
+      }
+      @media screen and(min-width: 768px) {
+        width: 354px;
+
+
+      }
+      @media screen and(min-width: 1200px) {
+        width: 370px;
+  
+      }
     position: relative;
     overflow: hidden;
 }
@@ -64,7 +119,19 @@
         position: absolute;
 
         content: "";
-        width: 370px;
+        @media screen and(min-width: 480px) {
+            width: 450px;
+    
+          }
+          @media screen and(min-width: 768px) {
+            width: 354px;
+    
+    
+          }
+          @media screen and(min-width: 1200px) {
+            width: 370px;
+      
+          }
         height: 294px;
         background: rgba(33, 150, 243, 0.9);
         transform:translateY(100%);
@@ -76,8 +143,25 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 370px;
     height: 294px;
+
+
+
+    @media screen and(min-width: 480px) {
+        width: 450px;
+
+      }
+      @media screen and(min-width: 768px) {
+        width: 354px;
+
+
+      }
+      @media screen and(min-width: 1200px) {
+        width: 370px;
+  
+      }
+
+
     color: $white;
  
 
@@ -95,5 +179,20 @@
 .a-link:hover .animation-overlay{
     transform:translateY(0);  
 }
-
+.portfolio-img {
+    width: 100%;
+ 
+   @media screen and(min-width: 480px) {
+     width: 450px;
+     // height: 294px;
+   }
+   @media screen and(min-width: 768px) {
+     width: 354px;
+     // height: 294px;
+   }
+   @media screen and(min-width: 1200px) {
+     width: 370px;
+     // height: 294px;
+   }
+ }
 /* ********************************************************************* */
