--- a/sass/components/_page_header.scss
+++ b/sass/components/_page_header.scss
@@ -64,13 +64,13 @@
         flex-grow: 2; 
     }
 }
-.navigation{
-    outline: 1px solid orange;
+// .navigation{
+//     outline: 1px solid orange;
   
-}
+// }
 .contacts{
 
-    outline: 1px solid ci;
+    // outline: 1px solid ci;
     color: $gray;
 }
 
