--- a/sass/components/_page_footer.scss
+++ b/sass/components/_page_footer.scss
@@ -23,7 +23,7 @@
   
     margin-left: auto;
     margin-right: auto;
-    outline: 2px solid tomato;
+    // outline: 2px solid tomato;
 
     padding: 0 15px;
     display: flex;
