--- a/css/main.css
+++ b/css/main.css
@@ -931,13 +931,15 @@ section.title {
   /* max-width: 1600px; */
   margin-left: auto;
   margin-right: auto;
-  height: 600px;
+  max-width: 1600px;
+  height: 400px;
+  background-color: #2F303A;
+  background-size: cover;
   background-position: center;
 }
 
 @media screen and (max-width: 767px) {
   .effect-solving {
-    height: 400px;
     padding-top: 118px;
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../img/hero/mobile/img-hero.jpg");
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/hero/mobile/img-hero.jpg");
@@ -970,6 +972,7 @@ section.title {
   .effect-solving {
     background-size: 1600px 600px;
     padding-top: 200px;
+    height: 600px;
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../img/hero/desktop/img-hero.jpg");
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/hero/desktop/img-hero.jpg");
   }
