--- a/sass/components/_index_section_1.scss
+++ b/sass/components/_index_section_1.scss
@@ -7,20 +7,21 @@ text-align: center;
 /* max-width: 1600px; */
 margin-left: auto;
 margin-right: auto;
-height: 600px;
+max-width: 1600px;
+height: 400px;
 // background-image: linear-gradient(  
 //     to right,
 //     rgba(47,48,58,0.4),
 //     rgba(47,48,58,0.4)
 //     ),
 //     url("../img/hero/mobile/img-hero@2x.jpg");
-// background-color:#2F303A;
-// background-size: cover;
+background-color:#2F303A;
+background-size: cover;
 background-position: center;
 
 
   @media screen and(max-width: 767px) {
-    height: 400px;
+    // height: 400px;
     padding-top: 118px;
       background-image: $gradient, url('../img/hero/mobile/img-hero.jpg');
       @media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
@@ -40,7 +41,7 @@ background-position: center;
     @media screen and(min-width: $desktop) {
       background-size: 1600px 600px;
       padding-top: 200px;
-      // height: 600px;
+      height: 600px;
       background-image: $gradient, url('../img/hero/desktop/img-hero.jpg');
       @media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
         background-image: $gradient, url('../img/hero/desktop/Img-hero@2x.jpg');
