--- a/sass/components/_page_header.scss
+++ b/sass/components/_page_header.scss
@@ -2,6 +2,7 @@
 
 
 .button-menu{
+
     display: inline-flex;
     margin: 0;
     padding: 0;
@@ -14,6 +15,7 @@
     @include for-size(tablet){
         display: none;
     }
+    
 }
 
 
@@ -34,7 +36,7 @@
 }
 
 .menu-container{
-
+    z-index: 1;
     padding: 0px;
     background-color: $white    ;
     text-align: center;
@@ -42,7 +44,9 @@
     &.is-open{  
         display: block;
 
+
         @include for-size(tablet){
+            
             display: inline-flex;
             justify-content: space-between;
             // flex-grow: 1;
@@ -109,6 +113,7 @@
             padding-top: 60px;
 
         }
+        z-index: 999;
         .item{
             display: flex;
             justify-content: center;
