--- a/sass/components/_page_footer.scss
+++ b/sass/components/_page_footer.scss
@@ -71,17 +71,22 @@
 }
 
 .join { 
-   
+   padding: 0;
    color: $white;
-   @include for-size(mobile){
-        
+
+   @media screen and (max-width: 480px){
+        display: block;
         margin-top: 60px;
-    } 
-    @include for-size(tablet-only){
-       
-       margin-top: 0px;
-    } 
+        margin-bottom: 60px;    
+}
+    @include for-size(tablet){
+        margin-top: 0px;
+ 
+ 
+   }
    @include for-size(desktop){
+       display: flex;
+        margin-top: 0px;
         margin-left: 70px;
    }
 
@@ -125,11 +130,15 @@
         // background-color: aqua;
     }
     @include for-size(tablet-only){
-
+ 
         width: 400px;
         // background-color: aqua;
         align-items: center;
     }
+    // @include for-size(mobile){
+    //     margin-top: 60px;
+    // }
+
         color: $white;
         padding: 0;
         text-transform: uppercase;
